--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -30,7 +30,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Mobile"
+            android:text="@string/splashscreen_title"
             android:layout_marginTop="-30dp"
             style="@style/TextContent.NameHeader"/>
 
@@ -41,7 +41,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ver 2.0\nBy Bagas P.I"
+        android:text="@string/copyright_splashscreen"
         android:textAlignment="center"
         android:lineHeight="30dp"
         style="@style/TextContent.NameHeader"
